fix: component `ContentRich` style overflow (#371)

--- a/styles/global.css
+++ b/styles/global.css
@@ -50,6 +50,8 @@ body {
 }
 
 .content-rich {
+  overflow-wrap: break-word;
+
   a {
     --at-apply: 'text-primary hover:underline hover:text-primary-active';
     .invisible {
